--- a/Bionluk Kişisel/index.html
+++ b/Bionluk Kişisel/index.html
@@ -23,8 +23,12 @@
         </div>
 
         <div class="content">
-            <h1>NAMASTE</h1>
+            <h1>ANASAYFA</h1>
+            
             <p>Örnek Site</p>
+             </div>
+             <div class="conts">
+                <h1>NAMASTE</h1>
              </div>
     </div>
 
